[package]
name = "wgpu-tuto"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
bytemuck = { version = "1", features = ["derive"] }
cgmath = "0.18"
env_logger = "0.11"
log = "0.4"
image = { version = "0.24", default-features = false, features = [
  "png",
  "jpeg",
] }
pollster = "0.3"
tobj = { version = "4", features = ["async"] }
wgpu = "22.0"
winit = { version = "0.29", default-features = false, features = [
  "rwh_06",
  "x11",
  "wayland",
] }

[build-dependencies]
fs_extra = "1"
